tests/tests_p1/pass/prof/30ok.min
program
	number i
start
	for i := ? until i <= 0 step i := i - 1 do
		i! "\n"!
		if i % 10 = 0 then
			"dead stop!\n"!
			stop
		fi
	done
end
