tests/tests_p1/fail/prof/30deadstop.min
program
	number i
start
	for i := ? until i <= 0 step i := i - 1 do
		i! "\n"!
		if i % 10 = 0 then
			stop
			"dead stop!\n"!
		fi
	done
end
